# Home-Finder

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: __init__.py  index.py
docs/: THIRD_PARTY_NOTICES.md  VERCEL_MOBILE_HOSTING.md
realestate/: __init__.py  cli.py  config.py  db.py  db_transfer.py  geospatial.py  gui.py  hosted_app.py  input_batch.py  llm.py  map_api.py  map_data.py  map_highlights.py  map_layers.py  map_server.py  models.py  neighborhood_scoring.py  neighborhoods.py  paths.py  profiles.py  schemas.py  school_zones.py  schools.py
realestate/enrichment/: __init__.py  amenities.py  commute.py  environment.py  flood.py  geocoding.py  parcel.py  public_record_pipeline.py  school_district.py  taxes.py  traffic.py
realestate/parsing/: __init__.py  address_parser.py  csv_mapper.py  listing_text_parser.py  price_parser.py
realestate/reports/: __init__.py  render.py
realestate/reports/templates/: agent_questions.md.j2  comparison_report.md.j2  (+7 more)
realestate/scoring/: __init__.py  daily_life.py  explanations.py  guardrails.py  overall.py  preference.py  quality.py  risk.py  value.py
realestate/sources/: base.py  email_alerts.py  listing_discovery.py  listing_text.py  manual_csv.py  mls_grid.py  zillow_liked.py
realestate/web/: manifest.webmanifest  map.css  map.html  map.js  service-worker.js
tests/: conftest.py  test_db_transfer.py  test_hosted_app.py  test_imports.py  test_input_batch.py  test_map_hub.py  test_public_source_adapters.py  test_reports_and_adapters.py  test_scoring.py
(+12 files in other folders)
