[project]
name = "realestate-assistant"
version = "0.1.0"
description = "Local/private real-estate decision assistant for a Twin Cities home search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "fastapi>=0.117.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
geo = [
    "geopy>=2.4",
    "shapely>=2.0",
]

[project.scripts]
realestate = "realestate.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["realestate*"]

[tool.setuptools.package-data]
realestate = [
    "reports/templates/*.j2",
    "web/*",
    "web/vendor/leaflet/*",
    "web/vendor/leaflet/images/*",
    "web/vendor/leaflet-draw/*",
    "web/vendor/leaflet-draw/images/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--basetemp=.pytest_tmp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
